--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
+    @apply text-black;
+}
+.icon{
+    @apply h-9;
 }
 html{
     box-sizing: border-box;
 }
+
 *,*::after,*::before{
     box-sizing: inherit;
     padding: 0;
