--- a/src/components/Contact/styles.module.css
+++ b/src/components/Contact/styles.module.css
@@ -1,3 +1,8 @@
 .contact_container{
-    @apply max-w-[45rem] w-[100%] m-auto grid gap-6; 
+    @apply max-w-[45rem] w-[90%] m-auto grid gap-4; 
+}
+@media only screen and (min-width: 72rem) {
+    .contact_container{
+        @apply gap-6; 
+    }
 }
