--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,9 +1,19 @@
 .footer{
-    @apply flex justify-between items-center px-40 py-4 bg-black;
+    @apply flex justify-between items-center px-8 py-4 bg-black;
 }
 .footer_icons_container{
     @apply flex items-center;
 }
 .footer_logo{
     @apply text-white;
+}
+@media only screen and (min-width: 42rem) {
+    .footer{
+        @apply px-20;
+    }
+}
+@media only screen and (min-width: 72rem) {
+    .footer{
+        @apply px-40;
+    }
 }
