--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -8,7 +8,7 @@
     @apply text-[2rem] z-10 font-semibold;
 }
 .img_bg{
-    @apply absolute top-0 right-0
+    @apply absolute top-0 right-0;
 }
 @media only screen and (min-width: 42rem) {
     .hero{
