Add Checkout page with client data form and Update shop services with add client data

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 .btn{
-    @apply text-sm p-2 border-2 border-solid rounded-full border-black shadow-md shadow-purple-light transition ease-in-out;
+    @apply text-sm p-2 border-2 border-solid rounded-full border-black shadow-md shadow-purple-light transition ease-in-out text-center;
 }
 .btn_black{
     @apply max-w-[18rem] w-[80%] p-4 bg-black text-white m-auto;
